--- a/_posts/2024-05-07-clml.md
+++ b/_posts/2024-05-07-clml.md
@@ -114,6 +114,7 @@ _styles: >
     border-left-color: #2bc039;
   }
   d-article aside *,
+  d-article details summary,
   d-article figcaption {
     color: var(--global-text-color) !important;
   }
@@ -161,16 +162,19 @@ The paper examines the behavior of LML and CLML in various settings: density mod
 The paper contrasts its findings with [Lyle et al. (2020) “A Bayesian Perspective on Training Speed and Model Selection”](https://arxiv.org/abs/2010.14499)<d-cite key="lyle2020bayesian"></d-cite> and [Immer et al. (2021)](https://arxiv.org/abs/2104.04975)<d-cite key="immer2021scalable"></d-cite>.
 
 This paper review is in two halves:
-the first half highlights interesting parts of the paper; the second half critically engages with some of the concepts, particularly the CLML for DNNs. It considers similarities between the suggested CLML, cross-validation, and validation sets & losses.
 
-I focus on the experimental results for DNNs in more detail because this is where I can engage critically with the material the best. The paper looks at many more settings, particularly deep kernel learning and GPs. 
+* the first half highlights interesting parts of the paper; 
+* the second half critically engages with some of the concepts, particularly the CLML for DNNs. 
+
+That is the second half of this review focuses on similarities between the suggested CLML, cross-validation, and validation sets & losses in the DNN experiments.
+Overall, the paper looks at many more settings, particularly deep kernel learning and GPs. 
 
 <aside class="box-note l-body" markdown="1">
 📑 **TL;DR:** The proposed CLML provides a Bayesian motivation for using validation sets with deep neural networks in the large-data regime. Following additional experiments from the authors, it seems the validation loss using Bayesian model averaging provides an even stronger signal than the (sampled) CLML estimate for DNNs. However, some questions remain.
 </aside>
 
 <aside class="box-note l-body" markdown="1">
-👁️‍🗨️ This review is based on [v1 of the paper](https://arxiv.org/abs/2202.11678v1)<d-cite key="lotfi2022bayesian"></d-cite>. After reaching out to the authors, they have [updated the paper, expanded the discussion section](/assets/2024-05-07/bmsmlg_v1_v2_version_comparison.pdf), and replied to a draft of this post. I shared two drafts with the authors (on 2022/5/30 & 31, respectively) before their reply (on 2022/6/3), and their comments refer to the first draft. This post is the second draft, except for minor edits. I have also added additional boxes marked with "👁️‍🗨️" to refer to the authors' response. I include the reply at the end. I also reply with additional investigations given the updated experiments.
+👁️‍🗨️ This review is based on [v1 of the paper](https://arxiv.org/abs/2202.11678v1)<d-cite key="lotfi2022bayesian"></d-cite>. After reaching out to the authors, they have [updated the paper, expanded the discussion section](/assets/2024-05-07/bmsmlg_v1_v2_version_comparison.pdf), and replied to a draft of this post. Two drafts were shared with the authors (on 2022/5/30 & 31, respectively) before their reply (on 2022/6/3), and their comments refer to the first draft. This post is the second draft, except for minor edits. Additional boxes have been added and marked with "👁️‍🗨️" to refer to the authors' response, which is included at the end and augmented with additional thoughts given the updated experiments.
 </aside>
 
 # Details
@@ -262,7 +266,7 @@ And overall:
 
 # How?
 
-Following the paper, I will summarize the different sections here. 
+Following the paper, this post will summarize some of the different sections here. 
 
 ## Use-cases
 
@@ -303,7 +307,7 @@ and the first question can be made clearer as: *what is the probability that **a
 As we will see below, the first question can also be viewed in the context of sequential predictions and learning curves. In information theory, the question would be: how well does the model compress the training data jointly? Looking at the joint predictive distribution is not yet a common concept in deep learning, however. 
 
 Recent works by Ian Osband et al., starting with [The Neural Testbed: Evaluating Joint Predictions](https://arxiv.org/abs/2110.04629)<d-cite key="osband2022neural"></d-cite> can help build intuitions for joint predictions.
-Similarly, a *gentler* introduction, comparing marginal and joint predictions, can also be found in our recent note [Marginal and Joint Cross-Entropies & Predictives for Online Bayesian Inference, Active Learning, and Active Sampling](https://arxiv.org/abs/2205.08766)<d-cite key="kirsch2022marginal"></d-cite>. 
+Similarly, a *gentler* introduction, comparing marginal and joint predictions, can also be found in the arXiv note [Marginal and Joint Cross-Entropies & Predictives for Online Bayesian Inference, Active Learning, and Active Sampling](https://arxiv.org/abs/2205.08766)<d-cite key="kirsch2022marginal"></d-cite>. 
 </aside>
 
 The following figure summarizes several of the pitfalls the paper examines: 
@@ -423,12 +427,6 @@ To show the advantages of the CLML over the LML, the paper examines the correlat
 The CLML is more strongly correlated with the generalization performance of the architectures than the LML. The LML suffers from higher first terms in the sum decomposition for more flexible models and is negatively correlated with test accuracy for smaller $$\lambda$$. The paper notes that the LML estimate using the LA's entropy is sensitive to the prior variance and the number of model parameters. This could also explain why larger models have worse LML.
 
 The CLML is computed using predictions on the held-out data for parameter samples from the LA ("function space"), does not estimate the model entropy, and thus does not suffer from the same issues. 
-
-# Hyperparameter Learning
-
-<aside class="box-note l-body" markdown="1">
-🏗 **Left out for now: hyperparameter learning.**
-</aside>
 
 # And?
 While the paper covers a lot more in its breadth, the second half mainly focuses on the CLML and examines the question of how the CLML is different from simply using a validation loss. Again, this is not a question directly examined in the paper, but given the prevalence of validation sets, it might be worth asking what the suggested method provides beyond that.
@@ -613,7 +611,7 @@ Lastly, the initially published DNN experiments in the paper did not compute the
 </aside>
 
 <aside class="box-note l-body" markdown="1">
-👁️‍🗨️ The authors have fixed this bug now and present initial experiment results for the affected figure 5b in the main paper. I compare the new results between *v1* and *v2* below and *find that the **BMA validation loss** performs better than the **CLML**.*
+👁️‍🗨️ The authors have fixed this bug now and present initial experiment results for the affected figure 5b in the main paper. This posts compares the new results between *v1* and *v2* below and *finds that the **BMA validation loss** performs better than the **CLML**.*
 </aside>
 
 The [`logcml_` files in the repository](https://github.com/Sanaelotfi/Bayesian_model_comparison/tree/main/Laplace_experiments/cifar) contain the code to compute the CLML for partially trained models. However, instead of computing
@@ -746,7 +744,7 @@ Let us examine the new results:
 
 In the three panels below, two panels show test accuracy vs. validation loss; one shows test accuracy vs. CLML. The left-most panel is the BMA test accuracy vs. (negative) BMA validation loss, the middle panel is vs. the CLML, and the right-most panel is vs. the (negative) non-BMA validation loss. 
 
-Note that the left-most panel is from *v1*, which was accidentally computing the BMA validation loss, and whose axis label I have adapted from *v1* for clarity. The two other plots are from *v2* after fixing the bug. See commits [here](https://github.com/Sanaelotfi/Bayesian_model_comparison/commit/a579aa292723dc20a6105ec8f4fff1045dd9a9fd) for fixing the CLML estimation and [here](https://github.com/Sanaelotfi/Bayesian_model_comparison/commit/3fa8ca2ecb314ee881f6c95a602ef58b9ccd3620) for computing the non-BMA validation loss. 
+Note that the left-most panel is from *v1*, which was accidentally computing the BMA validation loss, and whose axis label is adapted here from *v1* for clarity. The two other plots are from *v2* after fixing the bug. See commits [here](https://github.com/Sanaelotfi/Bayesian_model_comparison/commit/a579aa292723dc20a6105ec8f4fff1045dd9a9fd) for fixing the CLML estimation and [here](https://github.com/Sanaelotfi/Bayesian_model_comparison/commit/3fa8ca2ecb314ee881f6c95a602ef58b9ccd3620) for computing the non-BMA validation loss. 
 
 {% capture width %}
 " style="width: 20em;
@@ -771,7 +769,9 @@ Note that the left-most panel is from *v1*, which was accidentally computing the
   </div>
 </div>
 
-At first glance, there might be an observer effect in the experiments for the validation loss. The BMA validation loss in *v1* performs better than the CLML in *v2*, while the non-BMA validation loss in *v2* underperforms the CLML in *v2*. I asked the authors about it: they pushed the respective code (see link above) and explained that the updated, right-most panel computes the **non-BMA** validation loss, i.e., without LA samples. To me, it seems surprising that there is such a difference between the non-BMA validation loss and BMA validation loss: *the non-BMA validation loss is more than one nat worse on average than the BMA validation loss, based on visual inspection*. Note that the plots here and in the paper compute the average CLML and average validation loss and are thus directly comparable.
+At first glance, there might be an observer effect in the experiments for the validation loss. The BMA validation loss in *v1* performs better than the CLML in *v2*, while the non-BMA validation loss in *v2* underperforms the CLML in *v2*.
+When asked about it, the authors pushed the respective code (see link above) and explained that the updated, right-most panel computes the **non-BMA** validation loss, i.e., without LA samples. 
+It seems surprising that there is such a difference between the non-BMA validation loss and BMA validation loss: *the non-BMA validation loss is more than one nat worse on average than the BMA validation loss, based on visual inspection*. Note that the plots here and in the paper compute the average CLML and average validation loss and are thus directly comparable.
 
 The authors said in their response that:
 
@@ -779,8 +779,8 @@ The authors said in their response that:
 
 This is only partially true. 
 The BMA validation loss (which was accidentally computed in *v1* instead of the CLML) correlates very well with the BMA test accuracy.
-This is not surprising given that this is the frequentist purpose of using validation sets. If validation sets were not correlating well with the test accuracy, we would not be using them in practice. 🤗 As such, I wonder why the non-BMA validation loss negatively correlates with the BMA test accuracy for ResNets and overall in the *v2* results.
-Thus, only the non-BMA validation loss supports the opposite conclusion in *v2* of the paper and in the authors' response. 
+This is not surprising given that this is the frequentist purpose of using validation sets. If validation sets were not correlating well with the test accuracy, we would not be using them in practice. 🤗 As such, this raises the question why the non-BMA validation loss correlates negatively with the BMA test accuracy for ResNets and overall in the *v2* results.
+Thus, only the non-BMA validation loss supports the now opposite conclusion in *v2* of the paper and in the authors' response. 
 
 Yet what is also surprising is how well the BMA validation loss does vs. the CLML:
 
@@ -795,18 +795,18 @@ Does this mean we should use the BMA validation loss rather than estimating the 
 Secondly, when we compare the reported values between BMA validation loss and CLML, we notice that the CLML is lower than the BMA validation loss by half a nat for $$\lambda=10^2$$ and generally for CNNs.
 
 <aside class="box-note l-body" markdown="1">
-👉 I would expect that the (average) CLML to be better (higher) than the negative BMA validation loss and not worse (lower) because the CLML ought to be able to compress the validation set better using the joint predictive distribution than the marginal predictive distribution for the validation loss.  
+👉 One would expect that the (average) CLML to be better (higher) than the negative BMA validation loss and not worse (lower) because the CLML ought to be able to compress the validation set better using the joint predictive distribution than the marginal predictive distribution for the validation loss.  
 
 
 Intuitively, the CLML can take the validation data into account in a way that the validation loss cannot given the sequential conditioning of the former. 
 
 Hence, the CLML should generally be lower-bounded by the (BMA) validation loss and upper-bounded by the (BMA) test loss up to sample variance, assuming there are not many outliers in the data.
-The fact that the CLML is worse points toward the LA samples not being able to capture the implicit posterior in the joint predictive distribution. (This is a bit handwavy, but I think it is a reasonable interpretation and in line with our note on marginal and joint predictive distributions.)
+The fact that the CLML is worse points toward the LA samples not being able to capture the implicit posterior in the joint predictive distribution. (This is a bit handwavy but is a reasonable interpretation, as we will see below when taking into account additional evidence.)
 </aside>
 
-However, it seems, even though the new experiments in *v2* are supposed to reproduce the ones from *v1*, and I assume that the same model checkpoints were used for re-evaluation (as retraining is not necessary), both CLML and non-BMA validation loss are off by about half a nat for the CNNs. As such, the above consideration might hold but might not provide the answer here.
+However, it seems, even though the new experiments in *v2* are supposed to reproduce the ones from *v1*, and we can assume that the same model checkpoints were used for re-evaluation (as retraining is not necessary), both CLML and non-BMA validation loss are off by about half a nat for the CNNs. As such, the above consideration might hold but might not provide the answer here.
 
-Instead, I have overlaid the non-BMA validation loss and the CLML plots, both from *v2*, with a "difference blend": it shows the absolute difference between the colors for overlapping data points (the circles 🔴 and triangles 🔺), leading to black where there is a match, negative (green-ish) color for CLML, and positive (sepia) color for validation losses. I used the background grids to match the plots but hid the ones from CLML afterward---as such, the strong overlay is because the values are so close.
+Instead, we overlay the non-BMA validation loss and the CLML plots, both from *v2*, with a "difference blend": it shows the absolute difference between the colors for overlapping data points (the circles 🔴 and triangles 🔺), leading to black where there is a match, negative (green-ish) color for CLML, and positive (sepia) color for validation losses. The background grids were used to match the plots, but we hid the ones from CLML afterward---as such, the strong overlay is because the values are so close.
 
 {% capture width %}
 " style="width: 25em;
@@ -817,9 +817,9 @@ Instead, I have overlaid the non-BMA validation loss and the CLML plots, both fr
 Surprisingly---or rather as predicted when the LA does not really do much---it turns out that the validation loss for the CNNs (🔴) mostly fully matches the estimated CLML with 20 LA samples following a visual inspection. To be more precise, either the models have already sufficiently converged, or the CLML estimate is not actually capturing the correlations between points and thus ends up being very similar to the validation loss.
 
 <aside class="box-warning l-body" markdown="1">
-As said before, it would be great to actually compute the difference between CLML and BMA validation loss explicitly. Two things are not clear to me given the results in *v1* and *v2* I have examined:
+As mentioned before, it could be insightful to actually compute the difference between CLML and BMA validation loss explicitly. Two things are not clear to me given the results in *v1* and *v2*:
 
-1. Why is there a difference in nats between BMA validation loss in *v1* and the non-BMA validation loss and CLML in *v2*? Given that CLML matches the non-BMA validation loss for CNNs in *v2*, I would expect the BMA validation loss to be close to that, too.
+1. Why is there a difference in nats between BMA validation loss in *v1* and the non-BMA validation loss and CLML in *v2*? Given that CLML matches the non-BMA validation loss for CNNs in *v2*, the BMA validation loss ought to be close to that, too.
 
 2. Why is there different behavior for ResNets (🔺) in the BMA validation loss in *v1* and the CLML in *v2* compared to the non-BMA validation loss in *v2*? The low correlation coefficients of the non-BMA validation loss seem to come from that, as *v2* also explains in an added paragraph in appendix H.
 
@@ -831,9 +831,12 @@ As said before, it would be great to actually compute the difference between CLM
 {% include figure.html path="assets/img/2024-05-07-clml/rebuttal_3.png" class="img-fluid" width=width %}
 
 
-This changes my interpretation of the sample ablation in the author's response. The ablation shows no difference between 20 and 100 LA samples, with 100 LA even samples having a slightly lower rank correlation. So it seems x5 more LA samples are not enough to make a difference, or the Laplace posterior cannot capture the posterior as well as we would like. It would be interesting to examine this further. For the previously mentioned note, we have run some toy experiments on MNIST with 10,000 MC Dropout samples previously and did not find good adaptation. Obviously, the LA is not MC Dropout, and this is speculation, but it seems in line with my prior experience.
+This changes the interpretation of the sample ablation in the author's response. The ablation shows no difference between 20 and 100 LA samples, with 100 LA even samples having a slightly lower rank correlation. So it seems 5 times more LA samples are not sufficient to make a difference, or the Laplace posterior cannot capture the posterior as well as hoped. It would be interesting to examine this further. Kirsch et al (2022)<d-cite key="kirsch2022marginal"></d-cite> reported running toy experiments on MNIST with 10,000 MC Dropout samples without achieving good adaptation. Laplace approximation is not MC Dropout, and this is speculation, but it seems in agreement. Notwithstanding the compute cost and feasibility, could posterior samples using HMC or similar more principled methods provide better estimates? 
 
-Tweets by [@RobertRosenba14](https://twitter.com/RobertRosenba14) and [@stanislavfort](https://twitter.com/stanislavfort) also explain why sampling might not be fruitful for estimating joint distributions and compute the CLML in high-dimensional spaces---see [here](https://twitter.com/stanislavfort/status/1529865444701577216) and [here](https://twitter.com/RobertRosenba14/status/1517465854157500419).
+Tweets by [@RobertRosenba14](https://twitter.com/RobertRosenba14) and [@stanislavfort](https://twitter.com/stanislavfort) also explain why sampling might not be fruitful for estimating joint distributions and computing the CLML in high-dimensional spaces:
+
+{% twitter https://twitter.com/stanislavfort/status/1529865444701577216 %}
+{% twitter https://twitter.com/RobertRosenba14/status/1517465854157500419 %}
 
 Given the above, it is fair to say that 
 the estimate of the CLML is probably not as good as hoped, and further experiments might be needed to tease out when the CLML provides more value than the BMA validation loss. Note, however, that this question has not been explicitly examined in the paper. Instead, the paper compares LML and CLML with distinct estimation methods for DNNs.
