--- a/_posts/2024-05-07-clml.md
+++ b/_posts/2024-05-07-clml.md
@@ -695,8 +695,11 @@ This is not surprising because it is well-known that the validation loss of a mo
 # Conclusion
 
 It would be interesting to determine how the CLML estimated via LA compares with the LML estimated via LA. Similarly, comparing the CLML to the validation loss would be interesting.
+(However, the expectation is that an estimate via sampling will not be different very different from the validation loss simply because sampling-based approaches do not seem to be working well for estimating joint predictive distributions.)
 
-However, the expectation is that an estimate via sampling will not be different very different from the validation loss simply because sampling-based approaches do not seem to be working well for estimating joint predictive distributions. 
+Further, the choice of the cutoff parameter $m$ in CLML and its impact on the results could be explored---while the authors mention that larger values of $m$ generally lead to better performance, it would be helpful to have more guidance on how to select $m$ in practice. Likewise (and more details on this follow below), a comparison of CLML with other model selection criteria beyond ML, such as cross-validation or information criteria like AIC and BIC.
+
+Overall, the paper makes a significant contribution to the field of Bayesian model selection by questioning the reliance on the LML and proposing an alternative that may be better suited for deep learning. The empirical results are compelling, and the paper opens up avenues for further research on model selection criteria that are aligned with generalization performance.
 
 <aside class="box-note l-body" markdown="1">
 👉 Beyond providing a more principled view on using a validation set and a beautiful exposition of previous literature and various pitfalls and use-cases, this paper surfaces exciting research questions---especially in the small-data regime. Several follow-up experiments could provide further insights.
@@ -838,10 +841,9 @@ Tweets by [@RobertRosenba14](https://twitter.com/RobertRosenba14) and [@stanisla
 {% twitter https://twitter.com/stanislavfort/status/1529865444701577216 %}
 {% twitter https://twitter.com/RobertRosenba14/status/1517465854157500419 %}
 
-Given the above, it is fair to say that 
-the estimate of the CLML is probably not as good as hoped, and further experiments might be needed to tease out when the CLML provides more value than the BMA validation loss. Note, however, that this question has not been explicitly examined in the paper. Instead, the paper compares LML and CLML with distinct estimation methods for DNNs.
+Given the above, it is fair to say that the estimate of the CLML is probably not as good as hoped, and further experiments might be needed to tease out when the CLML provides more value than the BMA validation loss. Note, however, that this question has not been explicitly examined in the paper. Instead, the paper compares LML and CLML with distinct estimation methods for DNNs.
 
 <aside class="box-error l-body" markdown="1">
 🔥 Given the overall results of CLML vs. LML and the observation that the BMA validation loss seems to work very well for DNNs, even better than the CLML estimate, it might be worth ablating the performance of the validation loss for DKL and other methods as a separate research question. Then, we can see what we gain from the CLML exactly. 
-*Maybe a validation set "is all you need" - after all - the validation loss is easier to estimate.* But then, we knew that validation sets work really well for DNNs all along, despite them being "less principled," didn't we?
+*Maybe a validation set "is all you need"---after all---the validation loss is easier to estimate.* But then, we knew all along that validation sets work really well for DNNs all along, despite them being "less principled"?
 </aside>
